--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,12 @@ body{
   background-image: url("backgroundImage.jpg");
   background-repeat: no-repeat;
   background-size:cover;
+}
 
+.headerText{
+font-size: 40px;
+text-align: center;
+background-color: white;
+padding-top: 20px;
+font-family: 'Kalam', cursive;
 }
