--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
 font-size: 40px;
 text-align: center;
 background-color: white;
+opacity: .85;
 padding-top: 20px;
 font-family: 'Kalam', cursive;
 }
