--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@ body{
 .headerText{
 font-size: 40px;
 text-align: center;
+font-weight: bold;
 background-color: white;
-opacity: .85;
+opacity: .50;
 padding-top: 20px;
 font-family: 'Kalam', cursive;
 }
@@ -16,4 +17,11 @@ font-family: 'Kalam', cursive;
 .information {
   color: white;
   font-size: 24px;
+}
+
+.navbar{
+  font-family: serif;
+  font-weight: bold;
+  font-feature-settings: initial;
+
 }
