--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body{
   background-image: url("backgroundImage.jpg");
   background-repeat: no-repeat;
   background-size:cover;
+  font-size: 20px;
 }
 
 .headerText{
